; ModuleID = '/home/carl/AnghaBench/redis/src/extr_rdb.c_rdbLoadProgressCallback.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_rdb.c_rdbLoadProgressCallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, i64, i64, i64 }
%struct.TYPE_5__ = type { i64 }

@server = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@REPL_STATE_TRANSFER = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rdbLoadProgressCallback(%struct.TYPE_5__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @server, i32 0, i32 3), align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %3
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = call i32 @rioGenericUpdateChecksum(%struct.TYPE_5__* %10, i8* %11, i64 %12)
  br label %14

14:                                               ; preds = %9, %3
  %15 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @server, i32 0, i32 0), align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %48

17:                                               ; preds = %14
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* %6, align 8
  %22 = add i64 %20, %21
  %23 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @server, i32 0, i32 0), align 8
  %24 = udiv i64 %22, %23
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @server, i32 0, i32 0), align 8
  %29 = udiv i64 %27, %28
  %30 = icmp ugt i64 %24, %29
  br i1 %30, label %31, label %48

31:                                               ; preds = %17
  %32 = call i32 @updateCachedTime(i32 0)
  %33 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @server, i32 0, i32 2), align 8
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %41

35:                                               ; preds = %31
  %36 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @server, i32 0, i32 1), align 8
  %37 = load i64, i64* @REPL_STATE_TRANSFER, align 8
  %38 = icmp eq i64 %36, %37
  br i1 %38, label %39, label %41

39:                                               ; preds = %35
  %40 = call i32 (...) @replicationSendNewlineToMaster()
  br label %41

41:                                               ; preds = %39, %35, %31
  %42 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %43 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = call i32 @loadingProgress(i64 %44)
  %46 = call i32 (...) @processEventsWhileBlocked()
  %47 = call i32 @processModuleLoadingProgressEvent(i32 0)
  br label %48

48:                                               ; preds = %41, %17, %14
  ret void
}

declare dso_local i32 @rioGenericUpdateChecksum(%struct.TYPE_5__*, i8*, i64) #1

declare dso_local i32 @updateCachedTime(i32) #1

declare dso_local i32 @replicationSendNewlineToMaster(...) #1

declare dso_local i32 @loadingProgress(i64) #1

declare dso_local i32 @processEventsWhileBlocked(...) #1

declare dso_local i32 @processModuleLoadingProgressEvent(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
